# RoguelikeCustomECS

./: .gitignore  CMakeLists.txt  vcpkg.json
sources/: main.cpp
sources/include/: components.h  conductor.h  engine.h  tags.h  tools.h
sources/include/entities/: entities_factory.h  entity.h
sources/include/systems/: system.h  system_input.h  system_move.h
sources/src/: conductor.cpp  engine.cpp  entity.cpp
sources/src/entities/: entities_factory.cpp  entity.cpp
sources/src/systems/: system.cpp  system_input.cpp  system_move.cpp
